--- a/client/web/index.html
+++ b/client/web/index.html
@@ -11,19 +11,6 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   </head>
   <body>
-    <h2>A* Pathfinding on Kathmandu Roads</h2>
-    <p><strong>Instructions:</strong></p>
-    <ul>
-      <li>
-        Left-click a node to set <strong>Source (Blue)</strong> and
-        <strong>Destination (Green)</strong>.
-      </li>
-      <li>
-        Right-click a node to
-        <strong>Mark/Unmark as an Obstacle (Black)</strong>.
-      </li>
-      <li>Click "Reset Obstacles" to clear all obstacles.</li>
-    </ul>
     <button onclick="resetObstacles()">Reset Obstacles</button>
     <div id="map" style="width: 100%; height: 600px"></div>
 
@@ -38,22 +25,20 @@
         destinationNode = null,
         obstacles = new Set();
 
-      // Load road edges
       fetch("http://127.0.0.1:5000/edges")
         .then((response) => response.json())
         .then((data) => {
-          L.geoJSON(JSON.parse(data), { color: "black", weight: 1 }).addTo(map);
+          L.geoJSON(JSON.parse(data), { color: "black", weight: 2 }).addTo(map);
         })
         .catch((error) => console.error("Error loading edges:", error));
 
-      // Load nodes
       fetch("http://127.0.0.1:5000/nodes")
         .then((response) => response.json())
         .then((data) => {
           L.geoJSON(JSON.parse(data), {
             pointToLayer: function (feature, latlng) {
               return L.circleMarker(latlng, {
-                radius: 6,
+                radius: 4,
                 fillColor: "red",
                 color: "red",
                 fillOpacity: 1,
@@ -63,14 +48,9 @@
                   if (!sourceNode) {
                     sourceNode = nodeId;
                     this.setStyle({ fillColor: "blue", color: "blue" });
-                    console.log("✅ Source Node Selected:", sourceNode);
                   } else if (!destinationNode) {
                     destinationNode = nodeId;
                     this.setStyle({ fillColor: "green", color: "green" });
-                    console.log(
-                      "✅ Destination Node Selected:",
-                      destinationNode
-                    );
                     findShortestPath();
                   }
                 })
@@ -117,56 +97,39 @@
           return;
         }
 
-        console.log("Source Node: " + sourceNode);
-        console.log("Destination Node: " + destinationNode);
-
         fetch("http://127.0.0.1:5000/shortest_path", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
-            source: Number(sourceNode), // Ensure it's a number
+            source: Number(sourceNode),
             destination: Number(destinationNode),
           }),
         })
           .then((response) => response.json())
           .then((data) => {
             if (data.error) {
-              let error = JSON.stringify(data);
-              alert(error);
+              alert(JSON.stringify(data));
               return;
             }
-            animateExploration(data.explored, () => animatePath(data.path));
+            drawExploration(data.explored);
+            drawPath(data.path);
           })
           .catch((error) => console.error("Error finding path:", error));
       }
 
-      function animateExploration(exploredEdges, callback) {
-        let index = 0;
-        let interval = setInterval(() => {
-          if (index >= exploredEdges.length) {
-            clearInterval(interval);
-            callback();
-          } else {
-            let coords = exploredEdges[index];
-            L.polyline(coords, { color: "yellow", weight: 5 }).addTo(map);
-            index++;
-          }
-        }, 50);
+      function drawExploration(exploredEdges) {
+        exploredEdges.forEach((coords) => {
+          L.polyline(coords, { color: "yellow", weight: 4 }).addTo(map);
+        });
       }
 
-      function animatePath(pathCoords) {
-        let index = 0;
-        let interval = setInterval(() => {
-          if (index >= pathCoords.length - 1) {
-            clearInterval(interval);
-          } else {
-            L.polyline([pathCoords[index], pathCoords[index + 1]], {
-              color: "blue",
-              weight: 8,
-            }).addTo(map);
-            index++;
-          }
-        }, 100);
+      function drawPath(pathCoords) {
+        for (let i = 0; i < pathCoords.length - 1; i++) {
+          L.polyline([pathCoords[i], pathCoords[i + 1]], {
+            color: "green",
+            weight: 8,
+          }).addTo(map);
+        }
       }
     </script>
   </body>
